<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewTaskActivity">
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextID2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0"
        android:visibility="gone"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/TaskTitle"
        android:textStyle="bold"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/TaskTime"
        android:textStyle="bold"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/TaskPlace"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/btsavetask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onSaveTask"
        android:text="@string/NewTask"
        android:textStyle="bold"
        android:textColor="#2E2D2D"
        android:background="#FFF871CB"/>

</LinearLayout>